--- a/org.asup.os.type.pgm/build.properties
+++ b/org.asup.os.type.pgm/build.properties
@@ -5,5 +5,6 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                model/
+jars.compile.order = .
 source.. = src/
 output.. = bin/
