--- a/org.asup.db.core.db2/build.properties
+++ b/org.asup.db.core.db2/build.properties
@@ -1,4 +1,6 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/db2jcc_license_cu.jar,\
+               lib/db2jcc.jar
