--- a/org.asup.db.core.mssql/build.properties
+++ b/org.asup.db.core.mssql/build.properties
@@ -3,6 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/sqljdbc4.jar,\
-               lib/jtds-1.2.7.jar
+               lib/sqljdbc4.jar
                
