--- a/org.asup.db.syntax/plugin.xml
+++ b/org.asup.db.syntax/plugin.xml
@@ -14,4 +14,12 @@
             genModel="model/db-syntax.genmodel"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated db-syntax -->
+      <package
+            uri="http://www.asup.org/db/syntax/dml"
+            class="org.asup.db.syntax.dml.QDmlPackage"
+            genModel="model/db-syntax.genmodel"/>
+   </extension>
+
 </plugin>
