Issue #59 e #68. Spostato SetTransaction da DDL a DBL

--- a/org.asup.db.syntax/plugin.xml
+++ b/org.asup.db.syntax/plugin.xml
@@ -30,4 +30,12 @@
             genModel="model/db-syntax.genmodel"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated db-syntax -->
+      <package
+            uri="http://www.asup.org/db/syntax/dbl"
+            class="org.asup.db.syntax.dbl.QDblPackage"
+            genModel="model/db-syntax.genmodel"/>
+   </extension>
+
 </plugin>
