--- a/org.asup.os.core.cdo/plugin.xml
+++ b/org.asup.os.core.cdo/plugin.xml
@@ -15,7 +15,7 @@
       <!-- @generated os-core-cdo -->
       <package
             uri="http://www.asup.org/os/core/cdo"
-            class="org.asup.os.core.cdo.QCDOSystemCorePackage"
+            class="org.asup.os.core.cdo.CDOSystemCorePackage"
             genModel="model/os-core-cdo.genmodel"/>
    </extension>
 
