--- a/org.asup.fw.core.asf/.project
+++ b/org.asup.fw.core.asf/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.asup.fw.core.base</name>
+	<name>org.asup.fw.core.asf</name>
 	<comment></comment>
 	<projects>
 	</projects>
