--- a/org.asup.os.core.cdo/build.properties
+++ b/org.asup.os.core.cdo/build.properties
@@ -8,7 +8,8 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               splash.bmp
 jars.compile.order = .
 source.. = src/
 output.. = bin/
