--- a/org.asup.os.core/plugin.xml
+++ b/org.asup.os.core/plugin.xml
@@ -47,5 +47,17 @@
             class="org.asup.os.core.jobs.QOperatingSystemJobsPackage"
             genModel="model/os-core.genmodel"/>
    </extension>
+   <extension
+         id="cdo_store"
+         point="org.eclipse.core.runtime.products">
+      <product
+            application="org.asup.fw.core.e4.application"
+            name="As.UP CDO Store">
+         <property
+               name="appName"
+               value="As.UP CDO Store">
+         </property>
+      </product>
+   </extension>
 
 </plugin>
