--- a/org.asup.db.core.mysql/build.properties
+++ b/org.asup.db.core.mysql/build.properties
@@ -3,4 +3,4 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               lib/mysql-connector-java-5.1.13-bin.jar
+               lib/mariadb-java-client-1.1.8.jar
