--- a/org.asup.ui.pdmg.e4/plugin.xml
+++ b/org.asup.ui.pdmg.e4/plugin.xml
@@ -10,7 +10,7 @@
             objectClass="org.eclipse.core.resources.IFile">
          <menu
                icon="icons/asup_24.png"
-               id="org.asup.ui.pdmg.e4.menu1"
+               id="org.asup.ui.pdmg.antlr.e4.menu1"
                label="AntLR Parser"
                path="additions">
             <separator
@@ -19,37 +19,16 @@
          </menu>
          <action
                label="Compile AntLR grammar"
-               class="org.asup.ui.pdmg.e4.popup.actions.CompileAntLR"
-               menubarPath="org.asup.ui.pdmg.e4.menu1/compiler"
+               class="org.asup.ui.pdmg.antlr.e4.popup.actions.CompileAntLR"
+               menubarPath="org.asup.ui.pdmg.antlr.e4.menu1/compiler"
                enablesFor="1"
-               id="org.asup.ui.pdmg.e4.compileAntLR">
+               id="org.asup.ui.pdmg.antlr.e4.compileAntLR">
          </action>
          <action
-               class="org.asup.ui.pdmg.e4.popup.actions.EditAntLR"
-               id="org.asup.ui.pdmg.e4.editAntLR"
+               class="org.asup.ui.pdmg.antlr.e4.popup.actions.EditAntLR"
+               id="org.asup.ui.pdmg.antlr.e4.editAntLR"
                label="Edit AntLR grammar"
-               menubarPath="org.asup.ui.pdmg.e4.menu1/compiler">
-         </action>
-      </objectContribution>
-      <objectContribution
-            id="org.eclipse.ui.articles.action.contribution.popup.object"
-            nameFilter="*.lpg"
-            objectClass="org.eclipse.core.resources.IFile">
-         <menu
-               icon="icons/asup_24.png"
-               id="org.asup.ui.pdmg.e4.menu2"
-               label="LPG Parser"
-               path="additions">
-            <separator
-                  name="compiler">
-            </separator>
-         </menu>
-         <action
-               class="org.asup.ui.pdmg.e4.popup.actions.CompileLPG"
-               enablesFor="1"
-               id="org.asup.ui.pdmg.e4.compileLPG"
-               label="Compile LPG grammar"
-               menubarPath="org.asup.ui.pdmg.e4.menu2/compiler">
+               menubarPath="org.asup.ui.pdmg.antlr.e4.menu1/compiler">
          </action>
       </objectContribution>
    </extension>
