--- a/org.asup.ui.pdme.e4/plugin.xml
+++ b/org.asup.ui.pdme.e4/plugin.xml
@@ -5,8 +5,9 @@
    <extension
          point="org.eclipse.ui.popupMenus">
       <objectContribution
-            objectClass="org.eclipse.core.resources.IFile"
-            id="org.asup.ui.pdme.e4.contribution1">
+            id="org.asup.ui.pdme.e4.contribution1"
+            nameFilter="*.ecore"
+            objectClass="org.eclipse.core.resources.IFile">
          <menu
                icon="icons/asup_24.png"
                id="org.asup.ui.pdme.e4.menu1"
